--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -25157,7 +25157,7 @@
                                           class="carousel-slider__item" style="border-width: 0px">
                                           <div
                                             data-key="https://a0.muscache.com/pictures/c1dd351c-3898-415a-bcad-bc85d642dc98.jpg"
-                                            class="carousel-slider__item-wrapper">
+                                            class="h-full">
                                             <div class="lite-image" role="img" aria-busy="false"
                                               aria-label="9 double bedroom luxury villa with infinity pool" style="
                                                   --dls-liteimage-padding-top: 66.6667%;
