--- a/online-experience/calendar_week.html
+++ b/online-experience/calendar_week.html
@@ -1610,9 +1610,9 @@
                             <div class="rbc-time-header-content calendar-section__time-header-content">
                               <div class="rbc-row rbc-time-header-cell">
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Sunday, 3 July 2022"
                                     >
@@ -1624,9 +1624,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Monday, 4 July 2022"
                                     >
@@ -1638,9 +1638,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Tuesday, 5 July 2022"
                                     >
@@ -1652,9 +1652,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Wednesday, 6 July 2022"
                                     >
@@ -1666,9 +1666,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Thursday, 7 July 2022"
                                     >
@@ -1680,9 +1680,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Friday, 8 July 2022"
                                     >
@@ -1694,9 +1694,9 @@
                                   </div>
                                 </div>
                                 <div class="rbc-header">
-                                  <div class="calendar-section__day-header">
+                                  <div class="h-full">
                                     <button
-                                      class="calendar-section__day-header-btn"
+                                      class="h-full-btn"
                                       type="button"
                                       aria-label="Saturday, 9 July 2022"
                                     >
