--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -1305,7 +1305,7 @@
                                             <div data-showat="mediumAndAbove">
                                                 <div class="_eie8gyn">
                                                     <div class="_1tdgoer">
-                                                        <div class="carousel-slider__item-wrapper">
+                                                        <div class="h-full">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                                     class="link-block">
@@ -1344,7 +1344,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="carousel-slider__item-wrapper">
+                                                        <div class="h-full">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/a-standout-hosts-tips-for-getting-5-star-reviews-403"
                                                                     class="link-block">
@@ -1383,7 +1383,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="_1tdgoer">
-                                                        <div class="carousel-slider__item-wrapper">
+                                                        <div class="h-full">
                                                             <div class="_za5sya"><a
                                                                     href="/resources/hosting-experiences/a/experience-guest-spotlight-with-ranier-and-stephanie-402"
                                                                     class="link-block">
