--- a/resource-center/video.html
+++ b/resource-center/video.html
@@ -1185,7 +1185,7 @@
                                   <div data-showat="mediumAndAbove">
                                     <div class="_eie8gyn">
                                       <div class="_1tdgoer">
-                                        <div class="carousel-slider__item-wrapper">
+                                        <div class="h-full">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/promoting-your-experience-390" class="link-block">
                                               <div class="_w57qiaq">
@@ -1213,7 +1213,7 @@
                                         </div>
                                       </div>
                                       <div class="_1tdgoer">
-                                        <div class="carousel-slider__item-wrapper">
+                                        <div class="h-full">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/the-4-hospitality-keys-that-unlock-5-star-reviews-392" class="link-block">
                                               <div class="_w57qiaq">
@@ -1240,7 +1240,7 @@
                                         </div>
                                       </div>
                                       <div class="_1tdgoer">
-                                        <div class="carousel-slider__item-wrapper">
+                                        <div class="h-full">
                                           <div class="_za5sya">
                                             <a href="/resources/hosting-experiences/a/five-product-features-to-attract-more-guests-399" class="link-block">
                                               <div class="_w57qiaq">
