--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -5537,7 +5537,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
       <div class="cipszq0 dir dir-ltr">
         <div class="_14p0csax">
           <div style="display: grid; grid-area: 1 / 1 / auto / auto;">
-            <div class="_cdo1mj" style="grid-area: 1 / 1 / auto / auto;">
+            <div class="wh-full" style="grid-area: 1 / 1 / auto / auto;">
               <div class="_1oaklsk" style="overflow: hidden; padding-top: 67%;">
                 <div class="_skzmvy">
                   <div class="become-a-host__video-content">
@@ -5625,7 +5625,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
           </div>
           <div style="display: grid; grid-area: 1 / 2 / auto / auto;">
             <div class="_ii3m7c4">
-              <div class="_cdo1mj" style="grid-area: 1 / 1 / span 2 / span 2;">
+              <div class="wh-full" style="grid-area: 1 / 1 / span 2 / span 2;">
                 <div class="image-container"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-2" aria-label="Experience photo 1"
                     href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=0dfa1fb1-11b0-4e7f-bd4c-57a09293f210&amp;searchId=30a3e09a-8f17-462d-953b-9ef00c0582f3&amp;sectionId=a09a756c-c994-4370-8013-d63a9389b387&amp;source=p2&amp;modal=PHOTOS&amp;modalItem=1287242733"
                     class="_cs6f59v">
@@ -5658,7 +5658,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                     </div>
                   </a></div>
               </div>
-              <div class="_cdo1mj" style="grid-area: 1 / 3 / auto / auto;">
+              <div class="wh-full" style="grid-area: 1 / 3 / auto / auto;">
                 <div class="image-container"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-3" aria-label="Experience photo 2"
                     href="#"
                     class="_cs6f59v">
@@ -5691,7 +5691,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                     </div>
                   </a></div>
               </div>
-              <div class="_cdo1mj" style="grid-area: 2 / 3 / auto / auto;">
+              <div class="wh-full" style="grid-area: 2 / 3 / auto / auto;">
                 <div class="image-container"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-4" aria-label="Experience photo 3"
                     href="#"
                     class="_cs6f59v">
@@ -5727,7 +5727,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
             </div>
           </div>
           <div style="display: grid; grid-area: 1 / 3 / auto / auto;">
-            <div class="_cdo1mj" style="grid-area: 1 / 1 / auto / auto;">
+            <div class="wh-full" style="grid-area: 1 / 1 / auto / auto;">
               <div class="image-container"><a data-modal="#lightbox-modal" data-lightbox="#lightbox-media-5" aria-label="Experience photo 4"
                   href="#"
                   class="_cs6f59v">
