--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -1353,7 +1353,7 @@
                                   <div class="gallery-xl">
                                     <div class="hidden block-md">
                                       <div class="_1hytef3">
-                                        <div class="vh-100">
+                                        <div class="wh-full">
                                           <div class="relative">
                                             <div class="mb-6" style="margin-left: 24px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
@@ -1790,7 +1790,7 @@
                                     </div>
                                     <div class="hidden block-lg">
                                       <div class="header__logo">
-                                        <div class="vh-100">
+                                        <div class="wh-full">
                                           <div class="relative">
                                             <div class="mb-6" style="margin-left: 40px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
@@ -2227,7 +2227,7 @@
                                     </div>
                                     <div class="hidden block-xl">
                                       <div class="explore__time-btn-wrapper">
-                                        <div class="vh-100">
+                                        <div class="wh-full">
                                           <div class="relative">
                                             <div class="mb-6" style="margin-left: 80px" aria-hidden="true">
                                               <div aria-hidden="false" class="_of605hp">
@@ -2663,7 +2663,7 @@
                                       </div>
                                     </div>
                                     <div class="hidden block-xxl">
-                                      <div class="vh-100">
+                                      <div class="wh-full">
                                         <div class="relative">
                                           <div class="mb-6" style="margin-left: 0" aria-hidden="true">
                                             <div aria-hidden="false" class="_of605hp">
