--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1026,7 +1026,7 @@
                       <div class="header__logo-btn-text">Discounts</div>
                     </div>
                     <section class="site-content__page-content">
-                      <div class="vh-100">
+                      <div class="wh-full">
                         <div class="site-content__page-content-wrapper">
                           <div class="site-content__content-wrapper">
                             <div class="site-content__content-list">
