--- a/submission/photo-upload.html
+++ b/submission/photo-upload.html
@@ -1025,7 +1025,7 @@
                       </div>
                     </div>
                     <section class="site-content__page-content">
-                      <div class="vh-100">
+                      <div class="wh-full">
                         <div class="site-content__page-content-wrapper">
                           <div class="_1ory3bb" style="max-width: 626px">
                             <div class="site-content__content-list">
