--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1023,7 +1023,7 @@
                       <div class="header__logo-btn-text">Cancellation policy</div>
                     </div>
                     <section class="site-content__page-content">
-                      <div class="vh-100">
+                      <div class="wh-full">
                         <div class="site-content__page-content-wrapper">
                           <div class="site-content__content-wrapper">
                             <div class="site-content__content-list">
