--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1020,7 +1020,7 @@
                       <div class="header__logo-btn-text">Easy to do</div>
                     </div>
                     <section class="site-content__page-content">
-                      <div class="vh-100">
+                      <div class="wh-full">
                         <div class="site-content__page-content-wrapper">
                           <div class="site-content__content-wrapper">
                             <div class="site-content__content-list">
