rename remaining in payment-confirmed

--- a/payments/payment-confirmed.html
+++ b/payments/payment-confirmed.html
@@ -276,7 +276,7 @@
                               >
                                 <div class="_11oyobo"></div>
                                 <div class="_17ctt5">
-                                  <div class="_1vk19cb">
+                                  <div class="mt-4">
                                     <div class="_ixuuws">
                                       <div class="_14xy4yu">
                                         <div
@@ -478,7 +478,7 @@
                                           href="https://www.airbnb.com/experience_reservations/add_to_external_calendar/TAZQZJKB?calendar_type=g_cal&amp;source=p5"
                                           class="_1sikdxcl"
                                           ><span
-                                            class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
+                                            class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
                                             ><span
                                               class="atm_h0_1y44olf dir dir-ltr"
                                               ><svg
