rename vars from ted css

--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -10984,7 +10984,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               <div tabindex="0" class="_8pghme8">
                                 <div class="confirm-pay">
                                   <div class="_3hmsj">
-                                    <div style="display: contents; --dls19-brand-color:var(--f-k-smk-x);">
+                                    <div style="display: contents; --dls19-brand-color:var(--gray-900);">
                                       <section>
                                         <div class="_11ry7lz">
                                           <div class="_88xxct">
