--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27913,7 +27913,7 @@
                     </svg></span></button></div>
               <div class="confirm-pay">
                 <div class="_3hmsj">
-                  <div style="display: contents; --dls19-brand-color:var(--f-k-smk-x);">
+                  <div style="display: contents; --dls19-brand-color:var(--gray-900);">
                     <div class="_266d055">
                       <div class="flex-before-after dir dir-ltr" style="">
                         <div style="--gp-section-max-width:1120px;">
