--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -4742,7 +4742,7 @@
                                                                         <div class="cy9zvlx dir dir-ltr"
                                                                           style="cursor: auto; height: 48px; transform: scale(1); transform-origin: 50% 50% 0px; transition: transform 150ms ease-out 0s; width: 48px;">
                                                                           <div class="c16iuq07 dir dir-ltr"
-                                                                            style="background-color: var(--f-mkcy-f); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--f-mkcy-f); height: 48px; width: 48px;">
+                                                                            style="background-color: var(--white); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--white); height: 48px; width: 48px;">
                                                                             <div class="c1gqqhxk dir dir-ltr">
                                                                               <div class="c1f4uzzv dir dir-ltr"><svg
                                                                                   viewBox="0 0 16 16"
@@ -4785,7 +4785,7 @@
                                                                         </div>
                                                                         <div
                                                                           class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                           <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                             style="cursor: pointer;">Nonno Giulio</div>
                                                                         </div>
@@ -4817,7 +4817,7 @@
                                                                         </div>
                                                                         <div
                                                                           class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                           <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                             style="cursor: pointer;">Villa Cetinale
                                                                           </div>
@@ -4850,7 +4850,7 @@
                                                                         </div>
                                                                         <div
                                                                           class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                           <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                             style="cursor: pointer;">Donato e Donata Il
                                                                             ristoro con parco</div>
@@ -4883,7 +4883,7 @@
                                                                         </div>
                                                                         <div
                                                                           class="cnzx4gb n1i35bqz lislppr dir dir-ltr"
-                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                           <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                             style="cursor: pointer;">Il Ristoro di Ponte
                                                                             allo Spino</div>
@@ -4916,7 +4916,7 @@
                                                                         </div>
                                                                         <div
                                                                           class="cnzx4gb n1i35bqz lislppr dir dir-ltr"
-                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                          style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                           <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                             style="cursor: pointer;">Pieve Di San
                                                                             Giovanni
@@ -14726,7 +14726,7 @@
                                                                       <div class="cy9zvlx dir dir-ltr"
                                                                         style="cursor: auto; height: 48px; transform: scale(1); transform-origin: 50% 50% 0px; transition: transform 150ms ease-out 0s; width: 48px;">
                                                                         <div class="c16iuq07 dir dir-ltr"
-                                                                          style="background-color: var(--f-mkcy-f); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--f-mkcy-f); height: 48px; width: 48px;">
+                                                                          style="background-color: var(--white); background-image: var(--dc-gy-f-v); box-shadow: rgba(255, 255, 255, 0.18) 0px 0px 0px 1px inset, rgba(0, 0, 0, 0.18) 0px 2px 4px; color: var(--white); height: 48px; width: 48px;">
                                                                           <div class="c1gqqhxk dir dir-ltr">
                                                                             <div class="c1f4uzzv dir dir-ltr"><svg
                                                                                 viewBox="0 0 16 16"
@@ -14768,7 +14768,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                         <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                           style="cursor: pointer;">Nonno Giulio</div>
                                                                       </div>
@@ -14799,7 +14799,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                         <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                           style="cursor: pointer;">Villa Cetinale</div>
                                                                       </div>
@@ -14830,7 +14830,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div class="cnzx4gb n1i35bqz l18uea7r dir dir-ltr"
-                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; left: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                         <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                           style="cursor: pointer;">Donato e Donata Il
                                                                           ristoro con parco</div>
@@ -14862,7 +14862,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div class="cnzx4gb n1i35bqz lislppr dir dir-ltr"
-                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                         <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                           style="cursor: pointer;">Il Ristoro di Ponte
                                                                           allo Spino</div>
@@ -14894,7 +14894,7 @@
                                                                         </div>
                                                                       </div>
                                                                       <div class="cnzx4gb n1i35bqz lislppr dir dir-ltr"
-                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--f-k-smk-x);">
+                                                                        style="text-shadow: rgba(255, 255, 255, 0.75) 1px 1px 1px, rgba(255, 255, 255, 0.75) 1px -1px 1px, rgba(255, 255, 255, 0.75) -1px -1px 1px, rgba(255, 255, 255, 0.75) -1px 1px 1px; right: calc(100% + 6px); top: calc(50% + 0px); transform: translate(0px, -50%); color: var(--gray-900);">
                                                                         <div class="t1yinsi3 tv0loi4 dir dir-ltr"
                                                                           style="cursor: pointer;">Pieve Di San Giovanni
                                                                           Battista</div>
@@ -24291,7 +24291,7 @@
                 <div tabindex="0" class="_1seuw5go">
                   <div class="_w5rwe2">
                     <div class="_171co19">
-                      <div style="display: contents; --dls19-brand-color: var(--f-k-smk-x);">
+                      <div style="display: contents; --dls19-brand-color: var(--gray-900);">
                         <section>
                           <div class="_1kb5zmd">
                             <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Questions about this home?
